fix smooth scroll animation on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
 
 html {
   scroll-padding: 32px;
+}
+
+html[data-smooth-scroll="false"] {
+  scroll-behavior: auto;
+}
+
+html[data-smooth-scroll="true"] {
   scroll-behavior: smooth;
 }
 
